Body no longer cutting off on the right

--- a/Static/style.css
+++ b/Static/style.css
@@ -22,13 +22,13 @@ body {
 #hamList{
     margin: 0;
     list-style-type: none;
-    display: inline-block;
+    display: none;
     position: sticky;
     background-color: black;
     text-align: center;
-    visibility: hidden;
     width: 100vw;
     top: 10vh;
+    padding-inline-start: 0px;
 }
 
 .hamText{
@@ -136,6 +136,7 @@ body {
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
+        align-content: center;
         width: 100%;
         margin: auto;
         background-color: gray;
